crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_resource_pool_event_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedResourcePoolEvent;

fn decode(bytes: &[u8]) {
    let _: UnvalidatedResourcePoolEvent = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
